--- a/EFCore.WebApi/EFCore.WebApi/appsettings.json
+++ b/EFCore.WebApi/EFCore.WebApi/appsettings.json
@@ -1,10 +1,13 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
-  },
-  "AllowedHosts": "*"
+    "ConnectionStrings": {
+        "DefaultConnection": "Password=Gg34821450;Persist Security Info=True;User ID=sa;Initial Catalog=HeroApp;Data Source=LAPTOP-0E5LQAT5"
+    },
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft": "Warning",
+            "Microsoft.Hosting.Lifetime": "Information"
+        }
+    },
+    "AllowedHosts": "*"
 }
