--- a/EFCore.WebApi/EFCore.WebApi/appsettings.json
+++ b/EFCore.WebApi/EFCore.WebApi/appsettings.json
@@ -1,7 +1,7 @@
 {
-    "ConnectionStrings": {
-        "DefaultConnection": "Password=Gg34821450;Persist Security Info=True;User ID=sa;Initial Catalog=HeroApp;Data Source=LAPTOP-0E5LQAT5"
-    },
+  "ConnectionStrings": {
+    "DefaultConnection": "Password=Gg34821450.;Persist Security Info=True;User ID=sa;Initial Catalog=HeroApp;Data Source=DESKTOP-J8KCCGL\\SQLEXPRESS"
+  },
     "Logging": {
         "LogLevel": {
             "Default": "Information",
